# Silent-Savior

./: .gitignore  README.md  alarm_detection.py  alarm_detectionV1.py  fire_alarm_detection.py  pyproject.toml  silent savior.pptx
